Fix ctest command typo

--- a/master.cfg
+++ b/master.cfg
@@ -139,7 +139,7 @@ step_cmake_make_all = steps.ShellCommand( #region
 ) #endregion
 step_run_tests = steps.ShellCommand(name="run-tests.sh", #region
     workdir="debug/tests",
-	command=["ctests"]
+	command=["ctest"]
 ) #endregion
 
 autoconf_steps = [
