Ensure cmake builds CMAKE_BUILD_TYPE=Debug on ci server

--- a/master.cfg
+++ b/master.cfg
@@ -127,7 +127,7 @@ step_cmake_prep = steps.ShellCommand( #region
 ) #endregion
 step_cmake_config = steps.ShellCommand( #region
     name="cmake configure",
-	command=["/bin/sh", "-c", "cmake -B debug" ],
+	command=["/bin/sh", "-c", "cmake -B debug -DCMAKE_BUILD_TYPE=Debug" ],
 	env={
 		"CMAKE_CC_COMPILER_LAUNCHER" : "ccache",
 		"CMAKE_CXX_COMPILER_LAUNCHER" : "ccache",
